fix: horizontal scroll issue from cblanken blog repo
See https://github.com/cblanken/cblanken.github.io/issues/2 for details

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -40,27 +40,26 @@ h6 {
   align-items: center;
   line-height: 1.3;
   font-weight: bold;
-  margin-block-start: 1rem;
+  margin-block-start: 2.5rem;
   margin-block-end: 0.25rem;
 }
 
 h1 {
-  font-size: 3.3rem;
+  font-size: 2.8rem;
   font-weight: 800;
   margin-block-start: 0;
 }
 
 h2 {
-  font-size: 2.85rem;
-  margin-block-start: 1.25rem;
-}
-
-h3 {
   font-size: 2.4rem;
 }
 
+h3 {
+  font-size: 2.1rem;
+}
+
 h4 {
-  font-size: 2rem;
+  font-size: 1.75rem;
 }
 
 h5,
@@ -71,6 +70,7 @@ h6 {
 
 a {
   color: inherit;
+  word-break: break-word;
 }
 
 a:hover {
@@ -97,7 +97,8 @@ img {
 }
 
 p {
-  margin: 1rem 0;
+  margin-block-start: 1rem;
+  margin-block-end: 1.7rem;
 }
 
 figure {
@@ -150,11 +151,10 @@ code {
   font-feature-settings: normal;
   margin: 0 2px;
   border-radius: 3px;
-  font-size: .95rem;
   background: var(--code-inline-bg);
   width: 100%;
-  white-space: nowrap;
   padding-block: 1px;
+  word-break: break-all;
 }
 
 pre {
@@ -507,6 +507,7 @@ ol {
 
   @media (max-width: $phone-max-width) {
     padding: 20px;
+    min-width: 100dvw;
   }
 }
 
