--- a/sass/post.scss
+++ b/sass/post.scss
@@ -151,7 +151,7 @@
     margin: 10px 0;
 
     p {
-      line-height: 2rem;
+      line-height: 1.7rem;
     }
   }
 
@@ -352,20 +352,37 @@
   }
 }
 
-.post-list {
-  display: grid;
-  grid-template-columns: 1fr 7fr;
-  grid-column-gap: 1rem;
-  grid-row-gap: 8px;
-  text-wrap: nowrap;
+.post-title-wrapper {
+  @media (max-width: $phone-max-width) {
+    margin-inline-start: 1rem;
+  }
 
   &-title {
     font-size: 1.25rem;
+    word-break: break-all;
+
+  }
+}
+
+.post-list {
+  display: grid;
+  grid-template-columns: 1fr 7fr;
+  grid-template-columns: repeat(auto-fit, 1fr);
+  grid-column-gap: 1rem;
+  grid-row-gap: 8px;
+  text-wrap: wrap;
+
+  @media (max-width: $phone-max-width) {
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: start;
   }
 
   .post-date {
     font-family: $font-mono;
     text-align: right;
+    text-wrap: nowrap;
   }
 }
 
